# acuity-index-api-rs

./: AGENTS.md  API.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs  types.rs
