[package]
name = "acuity-index-api-rs"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Brown"]
description = "High-level Rust client for the acuity-index WebSocket API."
license = "Apache-2.0"

[dependencies]
futures = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "2", default-features = false }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-tungstenite = "0.29.0"
url = "2"
