[package]
name = "acuity-index-api-rs"
version = "0.1.2"
edition = "2024"
authors = ["Jonathan Brown"]
description = "High-level Rust client for the acuity-index WebSocket API."
license = "MIT"
repository = "https://github.com/jbrown/acuity-index-api-rs"
homepage = "https://github.com/jbrown/acuity-index-api-rs"
documentation = "https://docs.rs/acuity-index-api-rs"

[dependencies]
futures = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "2", default-features = false }
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-tungstenite = "0.29.0"
url = "2"
